fix: resolve issue with active checkboxes not showing active status

--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,7 @@ input[type="date"] {
 [type="checkbox"] {
   width: 0.9rem;
   height: 0.9rem;
-  color: dodgerblue;
+  color: dodgerblue !important;
   vertical-align: middle;
   appearance: none;
   -webkit-appearance: none;
